<resources>
    <string name="app_name">PiPad</string>
    <string name="keyboard">Keyboard</string>
    <string name="right_click">Right click</string>
    <string name="down">&#x21e9;</string>
    <string name="up">&#x21e7;</string>
    <string name="left">&#x21e6;</string>
    <string name="right">&#x21e8;</string>
    <string name="escape">&#x274c;</string>
    <string name="enter">&#x21b5;</string>
    <string name="page_up">&#x219f;</string>
    <string name="page_down">&#x21a1;</string>
    <string name="ready">Ready.</string>
    <string name="connecting">Connecting to %1$s:%2$d…</string>
    <string name="settings">Settings</string>
    <string name="launch_settings">Open settings</string>
    <string name="cant_connect">Can\'t connect to host at %1$s.\nCheck your connection settings.</string>
    <string name="retry">Retry</string>
</resources>
