<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/track_pad"
    android:hapticFeedbackEnabled="true"
    tools:context="ph.codeia.pipad.TrackPadFragment">

    <TextView
        android:id="@+id/the_pos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="160dp"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        >

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/do_type"
            style="?borderlessButtonStyle"
            android:src="@drawable/ic_keyboard"
            android:hint="@string/keyboard"
            />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/do_right_click"
            style="?borderlessButtonStyle"
            android:src="@drawable/ic_rightclick"
            android:hint="@string/right_click"
            />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:layout_gravity="bottom"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        >

        <View
            android:layout_width="64dp"
            android:layout_height="0dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="-8dp"
            android:layout_marginBottom="-8dp"
            android:layout_marginLeft="-9dp"
            android:layout_marginRight="-9dp"
            android:id="@+id/guide"
            />

        <ImageButton
            android:id="@+id/do_down"
            android:layout_width="64dp"
            android:layout_height="72dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/guide"
            android:src="@drawable/ic_down"
            android:contentDescription="@string/down"
            />

        <ImageButton
            android:id="@+id/do_up"
            android:layout_width="64dp"
            android:layout_height="72dp"
            android:layout_centerInParent="true"
            android:layout_above="@+id/guide"
            android:src="@drawable/ic_up"
            android:contentDescription="@string/up"
            />

        <ImageButton
            android:id="@+id/do_left"
            android:layout_width="56dp"
            android:layout_height="64dp"
            android:layout_centerInParent="true"
            android:layout_toLeftOf="@+id/guide"
            android:layout_toStartOf="@+id/guide"
            android:src="@drawable/ic_left"
            android:contentDescription="@string/left"
            />

        <ImageButton
            android:id="@+id/do_right"
            android:layout_width="56dp"
            android:layout_height="64dp"
            android:layout_centerInParent="true"
            android:layout_toRightOf="@+id/guide"
            android:layout_toEndOf="@+id/guide"
            android:src="@drawable/ic_right"
            android:contentDescription="@string/right"
            />

        <ImageButton
            android:id="@+id/do_escape"
            android:layout_width="56dp"
            android:layout_height="64dp"
            android:src="@drawable/ic_esc"
            android:contentDescription="@string/escape"
            />

        <ImageButton
            android:id="@+id/do_enter"
            android:layout_width="56dp"
            android:layout_height="64dp"
            android:layout_alignParentBottom="true"
            android:src="@drawable/ic_ok"
            android:contentDescription="@string/enter"
            />

        <ImageButton
            android:id="@+id/do_page_up"
            android:layout_width="56dp"
            android:layout_height="64dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_pageup"
            android:contentDescription="@string/page_up"
            />

        <ImageButton
            android:id="@+id/do_page_down"
            android:layout_width="56dp"
            android:layout_height="64dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:src="@drawable/ic_pagedown"
            android:contentDescription="@string/page_down"
            />

    </RelativeLayout>

    <include layout="@layout/include_appbar" />

</FrameLayout>